--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "copy-to-clipboard": "^3.3.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
     "next": "13.1.4",
+    "next-seo": "^5.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^2.0.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/navermaps": "^3.6.1",
     "eslint-config-prettier": "^8.6.0",
     "prettier": "2.8.3",
     "sass": "^1.57.1"
